<?xml version="1.0"?>
<package>
  <name>hase_desktop</name>
  <version>0.0.0</version>
  <description>Packages for working with Hase from a ROS desktop.</description>

  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/hase_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hase_msgs</run_depend>
  <run_depend>hase_viz</run_depend>

  <export><metapackage/></export>
</package>
