<?xml version="1.0"?>
<package>
  <name>hase_desktop</name>
  <version>0.0.0</version>
  <description>Packages for working with Hase from a ROS desktop.</description>

  <author email="garyservin@gmail.com">Gary Servin</author>
  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hase_msgs</run_depend>
  <run_depend>hase_viz</run_depend>

  <export><metapackage/></export>
</package>
