<?xml version="1.0"?>
<package>
  <name>hase_viz</name>
  <version>0.0.0</version>
  <description>Visualization launchers and helpers for Hase.</description>

  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>hase_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
